--- a/about-us.html
+++ b/about-us.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Toe Beans Cat Rescue</title>
+    <title>About Us | Toe Beans Cat Rescue</title>
 </head>
 <body>
-    <h1>Toe Beans Cat Rescue</h1>
+    <h1>About Us</h1>
     <nav>   
         <ul>    
             <li> 
@@ -16,7 +16,6 @@
             <li>
                 <a href="about-us.html">About Us</a>
             </li>
-            <li>About Us</li>
         </ul>
     </nav>
 </body>
