commit new page

--- a/rehoming-a-cat.html
+++ b/rehoming-a-cat.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>About Us | Toe Beans Cat Rescue</title>
+    <title>Rehoming A Cat | Toe Beans Cat Rescue</title>
 </head>
 <body>
-    <h1>About Us</h1>
+    <h1>Rehoming A Cat</h1>
     <nav>   
         <ul>    
             <li> 
