--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <li>
                 <a href="about-us.html">About Us</a>
             </li>
+            <li>
+                <a href="rehoming-a-cat.html">Rehoming A Cat</a>
+            </li>
         </ul>
     </nav>
 </body>
