--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <li>
                 <a href="rehoming-a-cat.html">Rehoming A Cat</a>
             </li>
+            <li>
+                <a href="contact-us.html">Contact Us</a>
+            </li>
         </ul>
     </nav>
 </body>
