commit add logo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Toe Beans Cat Rescue</title>
 </head>
 <body>
-    <h1>Toe Beans Cat Rescue</h1>
-    <nav>   
+    <nav class="navigation-bar"> 
+        <img class="logo" src="assets/css/logo.png">  
         <ul>    
             <li> 
                 <a href="index.html">Home</a>
@@ -25,5 +25,8 @@
             </li>
         </ul>
     </nav>
+    <div class="container-fluid" id="welcome-text">
+        Welcome to Toe Beans, where passion meets purpose in our mission to make a difference in the lives of our feline friends. At Toe Beans Cat Rescue, we believe that every cat deserves a loving home and a chance to thrive. Our journey began with a shared love for these whiskered wonders and a commitment to creating a world where no kitty is left behind.
+    </div>
 </body>
 </html>
