commit fixed logo url

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navigation-bar"> 
-        <img class="logo" src="assets/css/logo.png">  
+        <img class="logo" src="assets/images/logo.png">  
         <ul>    
             <li> 
                 <a href="index.html">Home</a>
