--- a/contact-us.html
+++ b/contact-us.html
@@ -28,5 +28,8 @@
             </li>
         </ul>
     </nav>
+    <div class="container-fluid" id="contact-us-text">
+        If you are thinking of rehoming one of our cats or have any questions, please contact us using to form below. We aim to reply to all enquiries within 3 working days.
+    </div>
 </body>
 </html>
