commit add images

--- a/about-us.html
+++ b/about-us.html
@@ -11,23 +11,20 @@
     <title>About Us | Toe Beans Cat Rescue</title>
 </head>
 <body>
-    <h1>About Us</h1>
-    <nav>   
+    <nav class="navigation-bar">
+        <img class="logo" src="assets/images/logo.png" alt="logo">   
         <ul>    
-            <li> 
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about-us.html">About Us</a>
-            </li>
-            <li>
-                <a href="rehoming-a-cat.html">Rehoming A Cat</a>
-            </li>
-            <li>
-                <a href="contact-us.html">Contact Us</a>
-            </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="rehoming-a-cat.html">Rehoming A Cat</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
     </nav>
+
+    <img class="hero-image-1" src="assets/images/hero-image-2.png">
+
+    <h1>About Us</h1>
+
     <div class="container-fluid" id="about-us-text">
         Welcome to Toe Beans, where passion meets purpose in our mission to make a difference in the lives of our feline friends. At Toe Beans Cat Rescue, we believe that every cat deserves a loving home and a chance to thrive. Our journey began with a shared love for these whiskered wonders and a commitment to creating a world where no kitty is left behind.
 
@@ -39,5 +36,11 @@ Our journey is marked by the joy of successful adoptions, the resilience of our 
 
 Together, we can make a paw-sitive impact, one rescue at a time. Welcome to Toe Beans Cat Rescue, where every step forward is a step toward a brighter, happier future for cats in need.
     </div>
+
+    <footer>
+        <p>
+            Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾
+        </p>
+    </footer>
 </body>
 </html>
