--- a/contact-us.html
+++ b/contact-us.html
@@ -11,25 +11,26 @@
     <title>Contact Us | Toe Beans Cat Rescue</title>
 </head>
 <body>
-    <h1>Contact Us</h1>
-    <nav>   
+    <nav class="navigation-bar">
+        <img class="logo" src="assets/images/logo.png" alt="logo">    
         <ul>    
-            <li> 
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about-us.html">About Us</a>
-            </li>
-            <li>
-                <a href="rehoming-a-cat.html">Rehoming A Cat</a>
-            </li>
-            <li>
-                <a href="contact-us.html">Contact Us</a>
-            </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="rehoming-a-cat.html">Rehoming A Cat</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
     </nav>
+
+    <h1>Contact Us</h1>
+
     <div class="container-fluid" id="contact-us-text">
         If you are thinking of rehoming one of our cats or have any questions, please contact us using to form below. We aim to reply to all enquiries within 3 working days.
     </div>
+
+    <footer>
+        <p>
+            Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾
+        </p>
+    </footer>
 </body>
 </html>
