--- a/rehoming-a-cat.html
+++ b/rehoming-a-cat.html
@@ -11,23 +11,20 @@
     <title>Rehoming A Cat | Toe Beans Cat Rescue</title>
 </head>
 <body>
-    <h1>Rehoming A Cat</h1>
-    <nav>   
+    <nav class="navigation-bar">
+        <img class="logo" src="assets/images/logo.png" alt="logo">    
         <ul>    
-            <li> 
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about-us.html">About Us</a>
-            </li>
-            <li>
-                <a href="rehoming-a-cat.html">Rehoming A Cat</a>
-            </li>
-            <li>
-                <a href="contact-us.html">Contact Us</a>
-            </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="rehoming-a-cat.html">Rehoming A Cat</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
     </nav>
+
+    <img class="hero-image-1" src="assets/images/hero-image-3.png">
+
+    <h1>Rehoming A Cat</h1>
+
     <div class="container-fluid" id="rehoming-text">
         Rehoming a cat is a wonderful and rewarding experience. Here's a step-by-step guide to help you through the process:
         
@@ -65,5 +62,11 @@
         
         Remember, adopting a cat is a long-term commitment, and providing love, care, and attention will contribute to a happy and healthy relationship. Each cat is unique, so enjoy getting to know your new companion and building a lifelong connection.
     </div>
+
+    <footer>
+        <p>
+            Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾
+        </p>
+    </footer>
 </body>
 </html>
