commit added form to contact page

--- a/contact-us.html
+++ b/contact-us.html
@@ -27,6 +27,17 @@
         If you are thinking of rehoming one of our cats or have any questions, please contact us using to form below. We aim to reply to all enquiries within 3 working days.
     </div>
 
+    <form>
+        <label for="name">Full Name</label>
+        <input id="name" type="text">
+        <label for="email">Email Address</label>
+        <input id="email" type="text">
+        <label for="contact-number">Contact Number</label>
+        <input id="contact-number" type="number">
+        <label for="enquiry">Your Enquiry</label>
+        <input id="enquiry" type="text">
+    </form>
+
     <footer>
         <p>
             Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾
