--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         Welcome to Toe Beans, where passion meets purpose in our mission to make a difference in the lives of our feline friends. At Toe Beans Cat Rescue, we believe that every cat deserves a loving home and a chance to thrive. Our journey began with a shared love for these whiskered wonders and a commitment to creating a world where no kitty is left behind.
     </div>
 
-    <img class="hero-image-1" src="assets/images/hero-image-1.png">
+    <div>
+        <img class="hero-image-1" src="assets/images/hero-image-1.png" alt="Three cats lying down">
+    </div>
 
     <footer>
         <p>
