--- a/rehoming-a-cat.html
+++ b/rehoming-a-cat.html
@@ -21,7 +21,9 @@
         </ul>
     </nav>
 
-    <img class="hero-image-1" src="assets/images/hero-image-3.png">
+    <div>
+        <img class="hero-image-1" src="assets/images/hero-image-2.png" alt="Three white kittens">
+    </div>
 
     <h1>Rehoming A Cat</h1>
 
