--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,9 @@
         </ul>
     </nav>
 
-    <img class="hero-image-1" src="assets/images/hero-image-2.png">
+    <div>
+        <img class="hero-image-1" src="assets/images/hero-image-3.png" alt="Three cats sleeping">
+    </div>
 
     <h1>About Us</h1>
 
