--- a/contact-us.html
+++ b/contact-us.html
@@ -36,6 +36,7 @@
         <input id="contact-number" type="number">
         <label for="enquiry">Your Enquiry</label>
         <input id="enquiry" type="text">
+        <input type="submit" value="Submit">
     </form>
 
     <footer>
