--- a/contact-us.html
+++ b/contact-us.html
@@ -36,7 +36,8 @@
         <input id="contact-number" type="number">
         <label for="enquiry">Your Enquiry</label>
         <input id="enquiry" type="text">
-        <input type="submit" value="Submit">
+        <textarea name="enquiry" id="enquiry" rows="10" cols="40"></textarea>
+        <input type="submit" value="Submit"/>
     </form>
 
     <footer>
