--- a/about-us.html
+++ b/about-us.html
@@ -10,15 +10,17 @@
     <title>About Us | Toe Beans Cat Rescue</title>
 </head>
 <body>
-    <nav class="navigation-bar">
-        <img class="logo" src="assets/images/logo.png" alt="logo">   
-        <ul>    
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="rehoming-a-cat.html">Rehoming A Cat</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="navigation-bar"> 
+            <img class="logo" src="assets/images/logo.png" alt="logo">  
+                <ul>    
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about-us.html">About Us</a></li>
+                    <li><a href="rehoming-a-cat.html">Rehoming A Cat</a></li>
+                    <li><a href="contact-us.html">Contact Us</a></li>
+                </ul>
+        </nav>
+    </header>
 
     <div>
         <img class="hero-image-1" src="assets/images/hero-image-3.png" alt="Three cats sleeping">
