--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <title>Toe Beans Cat Rescue</title>
 </head>
 <body>
-    <nav class="navigation-bar"> 
-        <img class="logo" src="assets/images/logo.png" alt="logo">  
-        <ul>    
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="rehoming-a-cat.html">Rehoming A Cat</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="navigation-bar"> 
+            <img class="logo" src="assets/images/logo.png" alt="logo">  
+                <ul>    
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about-us.html">About Us</a></li>
+                    <li><a href="rehoming-a-cat.html">Rehoming A Cat</a></li>
+                    <li><a href="contact-us.html">Contact Us</a></li>
+                </ul>
+        </nav>
+    </header>
 
     <div class="container-fluid" id="welcome-text">
         Welcome to Toe Beans, where passion meets purpose in our mission to make a difference in the lives of our feline friends. At Toe Beans Cat Rescue, we believe that every cat deserves a loving home and a chance to thrive. Our journey began with a shared love for these whiskered wonders and a commitment to creating a world where no kitty is left behind.
