--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+Sc">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Toe Beans Cat Rescue</title>
 </head>
 <body>
@@ -21,7 +21,9 @@
     </header>
 
     <div class="container-fluid" id="welcome-text">
+        <p>
         Welcome to Toe Beans, where passion meets purpose in our mission to make a difference in the lives of our feline friends. At Toe Beans Cat Rescue, we believe that every cat deserves a loving home and a chance to thrive. Our journey began with a shared love for these whiskered wonders and a commitment to creating a world where no kitty is left behind.
+        </p>
     </div>
 
     <div>
