--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
+        <img class="logo" src="assets/images/logo.png" alt="logo"> 
         <nav class="navigation-bar"> 
-            <img class="logo" src="assets/images/logo.png" alt="logo">  
                 <ul>    
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-us.html">About Us</a></li>
@@ -19,8 +19,9 @@
                 </ul>
         </nav>
     </header>
-
-    <div class="container-fluid" id="welcome-text">
+<br>
+    <main>
+    <div>
         <p>
         Welcome to Toe Beans, where passion meets purpose in our mission to make a difference in the lives of our feline friends. At Toe Beans Cat Rescue, we believe that every cat deserves a loving home and a chance to thrive. Our journey began with a shared love for these whiskered wonders and a commitment to creating a world where no kitty is left behind.
         </p>
@@ -29,6 +30,7 @@
     <div>
         <img class="hero-image-1" src="assets/images/hero-image-1.png" alt="Three cats lying down">
     </div>
+    </main>
 <br>
     <footer>
         <p>
