--- a/about-us.html
+++ b/about-us.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+    <link rel="stylesheet" href="assets/style.css">
     <title>About Us | Toe Beans Cat Rescue</title>
 </head>
 <body>
     <header>
-        <nav class="navigation-bar"> 
-            <img class="logo" src="assets/images/logo.png" alt="logo">  
+        <img class="logo" src="assets/images/logo.png" alt="logo"> 
+        <nav class="navigation-bar">  
                 <ul>    
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-us.html">About Us</a></li>
@@ -19,7 +19,8 @@
                 </ul>
         </nav>
     </header>
-
+<br>
+    <main>
     <div>
         <img class="hero-image-1" src="assets/images/hero-image-3.png" alt="Three cats sleeping">
     </div>
@@ -37,6 +38,7 @@ Our journey is marked by the joy of successful adoptions, the resilience of our 
 
 Together, we can make a paw-sitive impact, one rescue at a time. Welcome to Toe Beans Cat Rescue, where every step forward is a step toward a brighter, happier future for cats in need.
     </div>
+</main>
 <br>
     <footer>
         <p>
