--- a/rehoming-a-cat.html
+++ b/rehoming-a-cat.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Rehoming A Cat | Toe Beans Cat Rescue</title>
 </head>
 <body>
     <header>
-        <nav class="navigation-bar"> 
-            <img class="logo" src="assets/images/logo.png" alt="logo">  
+        <img class="logo" src="assets/images/logo.png" alt="logo"> 
+        <nav class="navigation-bar">  
                 <ul>    
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-us.html">About Us</a></li>
@@ -19,7 +19,8 @@
                 </ul>
         </nav>
     </header>
-
+<br>
+    <main>
     <div>
         <img class="hero-image-1" src="assets/images/hero-image-2.png" alt="Three white kittens">
     </div>
@@ -63,6 +64,7 @@
         
         Remember, adopting a cat is a long-term commitment, and providing love, care, and attention will contribute to a happy and healthy relationship. Each cat is unique, so enjoy getting to know your new companion and building a lifelong connection.
     </div>
+</main>
 <br>
     <footer>
         <p>
