commit added 2nd font and structure tidy up

--- a/contact-us.html
+++ b/contact-us.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <title>Contact Us | Toe Beans Cat Rescue</title>
 </head>
@@ -23,8 +24,10 @@
     <main>
     <h1>Contact Us</h1>
 
-    <div class="container-fluid" id="contact-us-text">
-        If you are thinking of rehoming one of our cats or have any questions, please contact us using to form below. We aim to reply to all enquiries within 3 working days.
+    <div>
+        <p>
+            If you are thinking of rehoming one of our cats or have any questions, please contact us using to form below. We aim to reply to all enquiries within 3 working days.
+        </p>
     </div>
 
     <form>
