commit layout alterations

--- a/index.html
+++ b/index.html
@@ -22,15 +22,24 @@
     </header>
 <br>
     <main>
-    <div>
-        <p>
-        Welcome to Toe Beans, where passion meets purpose in our mission to make a difference in the lives of our feline friends. At Toe Beans Cat Rescue, we believe that every cat deserves a loving home and a chance to thrive. Our journey began with a shared love for these whiskered wonders and a commitment to creating a world where no kitty is left behind.
-        </p>
-    </div>
-
-    <div>
-        <img class="hero-image-1" src="assets/images/hero-image-1.png" alt="Three cats lying down">
-    </div>
+        <section class="hero">
+            <div class="container">
+                <div class="text-container">
+                <h1 class="main-header">Welcome to Toe Beans Cat Rescue</h1>
+                <p class="main-header-content">Where passion meets purpose in our mission to make a difference in the lives of our feline friends. At Toe Beans Cat Rescue, we believe that every cat deserves a loving home and a chance to thrive. Our journey began with a shared love for these whiskered wonders and a commitment to creating a world where no kitty is left behind.
+                </p>
+                </div>    
+                <div class="img-container">
+                <img class="hero-image-1" src="assets/images/hero-image-1.png" alt="Three cats lying down">
+                </div>   
+            </div>        
+        </section>
+        <br>
+        <section class="three-icons">
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
     </main>
 <br>
     <footer>
