--- a/contact-us.html
+++ b/contact-us.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
+   
     <title>Contact Us | Toe Beans Cat Rescue</title>
 </head>
 <body>
@@ -29,18 +30,21 @@
             If you are thinking of rehoming one of our cats or have any questions, please contact us using to form below. We aim to reply to all enquiries within 3 working days.
         </p>
     </div>
-
+    <br>
+<div class="form-container">
     <form>
         <label for="name">Full Name</label>
-        <input id="name" type="text">
+        <input id="name" type="text" autocomplete="name">
         <label for="email">Email Address</label>
-        <input id="email" type="text">
+        <input id="email" type="text" autocomplete="email">
         <label for="contact-number">Contact Number</label>
         <input id="contact-number" type="number">
         <label for="enquiry">Your Enquiry</label>
         <textarea name="enquiry" id="enquiry" rows="10" cols="40"></textarea>
         <input type="submit" value="Submit"/>
     </form>
+    
+</div>    
 </main>
 <br>
     <footer>
