--- a/rehoming-a-cat.html
+++ b/rehoming-a-cat.html
@@ -28,43 +28,42 @@
 <br>
     <div>
         <h1>Rehoming A Cat</h1>
-            <p>
-                Rehoming a cat is a wonderful and rewarding experience. Here's a step-by-step guide to help you through the process:
+                <p>Rehoming a cat is a wonderful and rewarding experience. Here's a step-by-step guide to help you through the process:</p>
 
-                Research and Assess:
-                Consider your lifestyle, living situation, and the amount of time you can dedicate to a pet.
-                Research different cat breeds and their characteristics to find one that matches your preferences and fits well with your lifestyle.
+                <h2>Research and Assess:</h2>
+                <p>Consider your lifestyle, living situation, and the amount of time you can dedicate to a pet.
+                Research different cat breeds and their characteristics to find one that matches your preferences and fits well with your lifestyle.</p>
         
-                Visit Shelters and Rescues:
-                Local animal shelters, rescue organizations, and adoption events are great places to find cats in need of homes.
-                Spend time interacting with different cats to get a sense of their personalities.
+                <h2>Visit Shelters and Rescues:</h2>
+                <p>Local animal shelters, rescue organizations, and adoption events are great places to find cats in need of homes.
+                Spend time interacting with different cats to get a sense of their personalities.</p>
 
-                Complete an Adoption Application:
-                Once you find a cat you're interested in, you'll need to fill out an adoption application. This form typically asks about your living situation, experience with pets, and your plans for caring for the cat.
+                <h2>Complete an Adoption Application:</h2>
+                <p>Once you find a cat you're interested in, you'll need to fill out an adoption application. This form typically asks about your living situation, experience with pets, and your plans for caring for the cat.</p>
 
-                Meet and Greet:
-                Schedule a meet-and-greet with the cat you're interested in. Spend time interacting with the cat to ensure compatibility.
+                <h2>Meet and Greet:</h2>
+                <p>Schedule a meet-and-greet with the cat you're interested in. Spend time interacting with the cat to ensure compatibility.</p>
 
-                Home Visit (if required):
-                Some adoption agencies may require a home visit to ensure that your living space is safe and suitable for a pet.
+                <h2>Home Visit (if required):</h2>
+                <p>Some adoption agencies may require a home visit to ensure that your living space is safe and suitable for a pet.</p>
 
-                Adoption Fee:
-                Be prepared to pay an adoption fee, which often covers vaccinations, spaying/neutering, and other medical expenses. This fee helps support the rescue organization's efforts.
+                <h2>Adoption Fee:</h2>
+                <p>Be prepared to pay an adoption fee, which often covers vaccinations, spaying/neutering, and other medical expenses. This fee helps support the rescue organization's efforts.</p>
 
-                Prepare Your Home:
-                Set up a comfortable and safe space for your new cat, including a litter box, food and water bowls, toys, and a cozy bed.
+                <h2>Prepare Your Home:</h2>
+                <p>Set up a comfortable and safe space for your new cat, including a litter box, food and water bowls, toys, and a cozy bed.</p>
 
-                Veterinary Care:
-                Schedule a visit to the veterinarian for a health check-up. Ensure that vaccinations are up-to-date and discuss spaying/neutering if it hasn't already been done.
+                <h2>Veterinary Care:</h2>
+                <p>Schedule a visit to the veterinarian for a health check-up. Ensure that vaccinations are up-to-date and discuss spaying/neutering if it hasn't already been done.</p>
 
-                Adjustment Period:
-                Understand that the transition to a new home can be stressful for a cat. Give your new pet time to adjust, and be patient and supportive during this period.
+                <h2>Adjustment Period:</h2>
+                <p>Understand that the transition to a new home can be stressful for a cat. Give your new pet time to adjust, and be patient and supportive during this period.</p>
 
-                Building a Relationship:
-                Spend quality time bonding with your new cat. Play, cuddle, and create a positive environment to strengthen the bond between you and your new feline friend.
+                <h2>Building a Relationship:</h2>
+                <p>Spend quality time bonding with your new cat. Play, cuddle, and create a positive environment to strengthen the bond between you and your new feline friend.</p>
                 
-                Remember, adopting a cat is a long-term commitment, and providing love, care, and attention will contribute to a happy and healthy relationship. Each cat is unique, so enjoy getting to know your new companion and building a lifelong connection.
-            </p>    
+                <p><strong>Remember, adopting a cat is a long-term commitment, and providing love, care, and attention will contribute to a happy and healthy relationship. Each cat is unique, so enjoy getting to know your new companion and building a lifelong connection.</strong></p>
+                </p>    
     </div>
 </main>
 <br>
