commit add form validation

--- a/contact-us.html
+++ b/contact-us.html
@@ -33,13 +33,13 @@
         <div class="form-container">
             <form>
                 <label for="name">Full Name</label>
-                <input id="name" type="text" autocomplete="name">
+                <input id="name" type="text" autocomplete="name" required>
                 <label for="email">Email Address</label>
-                <input id="email" type="text" autocomplete="email">
+                <input id="email" type="text" autocomplete="email" required>
                 <label for="contact-number">Contact Number</label>
-                <input id="contact-number" type="number">
+                <input id="contact-number" type="number" required>
                 <label for="enquiry">Your Enquiry</label>
-                <textarea name="enquiry" id="enquiry" rows="10" cols="40"></textarea>
+                <textarea name="enquiry" id="enquiry" rows="10" cols="40" required></textarea>
                 <input type="submit" value="Submit"/>
             </form>   
         </div>    
