commit added review section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,22 @@
                 </div>   
             </div>        
         </section>
-        <br>
+<br>        
+        <section class="review-header">
+            <h2>Reviews ⭐⭐⭐</h2>
+        </section>
+        <article class="reviews">
+            <section class="review1">
+                <p>"Toe Beans Cat Rescue is an absolute gem! The dedication and love that the staff put into caring for the cats are truly commendable. The facility is clean, well-maintained, and provides a safe and comfortable environment for the cats. It's evident that the team goes above and beyond to ensure these feline friends are happy and healthy. I adopted my furry companion from Toe Beans, and the whole process was seamless. Thank you for the wonderful work you do!"</p>
+            </section>
+            <section class="review2">
+                <p>"I can't say enough good things about Toe Beans Cat Rescue. The team is incredibly passionate about their mission, and it shows in the way they care for the cats. They prioritize the well-being of each cat, providing them with the love and attention they deserve. The adoption process was smooth, and the staff took the time to match me with the perfect feline companion. I'm grateful for the positive experience and highly recommend Toe Beans to anyone looking to adopt a cat."</p>
+            </section>
+            <section class="review3">
+                <p>"Toe Beans Cat Rescue is a shining example of a rescue organization that truly puts the cats first. The facility is welcoming, and you can tell the cats are happy and well-cared-for. The staff is knowledgeable and friendly, answering all my questions and making the adoption process a breeze. I adopted my two cats from Toe Beans, and they have brought so much joy into my life. Thank you for the incredible work you do in finding loving homes for these deserving animals."</p>
+            </section>
+        </article>
+<br>
     </main>
 <br>
     <footer>
