commit added contact us button

--- a/about-us.html
+++ b/about-us.html
@@ -34,10 +34,12 @@
             <p>Founded with a heart full of compassion and a desire to make a lasting impact, Toe Beans Cat Rescue is dedicated to the well-being of cats in need. We are a non-profit organization driven by a team of devoted volunteers who pour their time, energy, and love into every furry friend we encounter. From abandoned kittens to senior cats looking for a second chance, we are here to provide a safe haven and a helping hand.</p>
             <p>Toe Beans Cat Rescue is more than just a charity; it's a community united by the common goal of creating a brighter future for cats in distress. With every rescue, adoption, and outreach effort, we strive to raise awareness about responsible pet ownership, spaying and neutering, and the importance of treating our feline companions with the love and respect they deserve.</p>
             <p>Our journey is marked by the joy of successful adoptions, the resilience of our rescue stories, and the camaraderie of our passionate supporters. Join us in the pursuit of a world where every cat is cherished and every toe bean is appreciated. Together, we can make a paw-sitive impact, one rescue at a time.</p>
-        </div>
+            <button href="contact-us.html">Contact Us!</button>
+        </div>        
     </main>
 <br>
     <footer>
+        <p>📧 hello@toebeanscatrescue.co.uk</p>
         <p>Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾</p>
     </footer>
 </body>
