--- a/contact-us.html
+++ b/contact-us.html
@@ -46,6 +46,7 @@
     </main>
 <br>
     <footer>
+        <p>📧 hello@toebeanscatrescue.co.uk</p>
         <p>Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾</p>
     </footer>
 </body>
