--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
     </main>
 <br>
     <footer>
-        <p>
-            Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾
-        </p>
+        <p>📧 hello@toebeanscatrescue.co.uk</p>
+        <p>Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾</p>
     </footer>
 </body>
 </html>
