--- a/rehoming-a-cat.html
+++ b/rehoming-a-cat.html
@@ -67,6 +67,7 @@
     </main>
 <br>
     <footer>
+        <p>📧 hello@toebeanscatrescue.co.uk</p>
         <p>Toe Beans Cat Rescue | Website for educational purposes only | Designed by Georgina Phipps 🐾</p>
     </footer>
 </body>
